# ConsentFlow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  backend.md  consentflow_extension_popup.html  consentflow_logos.html  files.md  frontend.md  plan.md  presentation.md  project-summary.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci-backend.yml  ci.yml  codeql.yml  keyword-labeler.yml  limit-assignments.yml  pr-score-calculator.yml  welcome-bot.yml
consentflow-backend/: .env.example  ConsentFlow_Postman_Collection.json  Dockerfile  README.md  cleanup_db.py  docker-compose.yml  otel-collector-config.yaml  pyproject.toml  seed_db.py
consentflow-backend/consentflow/: __init__.py  anonymizer.py  dataset_gate.py  gemini_client.py  inference_gate.py  langchain_gate.py  memory_store.py  mlflow_utils.py  monitoring_gate.py  otel_dataset_gate.py  otel_inference_gate.py  otel_monitoring_gate.py  otel_training_gate.py  policy_auditor.py  sdk.py  telemetry.py  training_gate.py
consentflow-backend/consentflow/app/: __init__.py  cache.py  config.py  db.py  kafka_producer.py  main.py  models.py
consentflow-backend/consentflow/app/routers/: __init__.py  audit.py  chat.py  consent.py  dashboard.py  extension.py  infer.py  policy.py  users.py  webhook.py
consentflow-backend/consentflow/migrations/: 001_init.sql  002_audit_log.sql  003_seed_demo_user.sql  004_policy_scans.sql  005_chat_memory.sql  006_consent_freeze_log.sql
consentflow-backend/grafana/dashboards/: consentflow.json
consentflow-backend/grafana/provisioning/dashboards/: dashboard.yaml
consentflow-backend/grafana/provisioning/datasources/: prometheus.yaml
consentflow-backend/tests/: conftest.py  test_consent.py  test_gate05_e2e.py  test_health.py  test_monitoring_gate.py  test_policy_auditor.py  test_step3.py  test_step4.py  test_step5.py  test_step7.py
consentflow-extension/: manifest.json  vite.config.ts
consentflow-extension/src/: vitest.setup.ts
consentflow-extension/src/background/: serviceWorker.ts
consentflow-extension/src/content/: index.ts  interceptor.ts  reverseMapper.test.ts  reverseMapper.ts
consentflow-extension/src/popup/: App.tsx  index.html
consentflow-extension/src/utils/: dummyGenerator.test.ts  dummyGenerator.ts
consentflow-extension/src/vault/: vault.ts
consentflow-frontend/: package-lock.json  package.json
consentflow-frontend/app/: globals.css  layout.tsx  page.tsx
consentflow-frontend/app/(dashboard)/: layout.tsx
consentflow-frontend/components/: Sidebar.tsx  providers.tsx
consentflow-frontend/components/demo/: ChatPanel.tsx  MemoryPanel.tsx  PipelinePanel.tsx
consentflow-frontend/lib/: axios.ts  constants.ts  types.ts  utils.ts
graphify-out/: .graphify_chunks.json  .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
(+22 files in other folders)
